Algumas alterações.
