# back-end/swagger-output.json
@@ -604,6 +604,34 @@
             }
           }
         }
+      },
+      "patch": {
+        "tags": [
+          "Mão"
+        ],
+        "summary": "Realiza a alteração parcial da mão",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/maoModel"
+              }
+            }
+          }
+        }
       }
     }
   },
